# MultiplexAnalysisProgram

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  __init__.py  __main__.py  config.py  conftest.py  domain.py  pyproject.toml  schema.py
.github/workflows/: ci.yml
analysis/: __init__.py  intensity.py  spatial.py
groovy/: Export_DAPI_to_Mask.groovy
hne/: __init__.py  config.py  schema.py
hne/analysis/: __init__.py  metrics.py
hne/data/: __init__.py  dataset.py
hne/inference/: __init__.py  predictor.py
hne/io/: __init__.py  loaders.py
hne/models/: __init__.py  unet.py
hne/preprocessing/: __init__.py  augmentation.py  balancer.py  color_decomposition.py  patch_extractor.py
hne/training/: __init__.py  trainer.py
hne/visualization/: __init__.py  eda.py  overlays.py
io/: __init__.py  loaders.py
notebooks/: IF_analysis.ipynb  data_preparation_tumor_invasion_front.ipynb  tumor_invasion_front_detection.ipynb
preprocessing/: __init__.py  segmentation.py  types.py
tests/: test_data_prep_extended.py  test_helpers_validation.py  test_hne_metrics.py  test_hne_models.py  test_hne_preprocessing.py  test_intensity.py  test_overlays.py  test_pipeline_e2e.py  test_segmentation.py  test_spatial.py  test_spatial_extended.py
utils/: __init__.py  helpers.py  validation.py
visualization/: __init__.py  data_prep.py  overlays.py  plotting.py  qc.py
