[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "multiplex-pipeline"
version = "0.1.0"
description = "Spatial biology pipeline for multiplex fluorescence microscopy and H&E invasion-front detection"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Daniel Anchuela Cantarero", email = "dani.anchuela09@gmail.com" }]
keywords = ["multiplex", "microscopy", "spatial-biology", "computer-vision", "image-analysis"]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "scikit-image>=0.21",
    "matplotlib>=3.7",
    "seaborn>=0.13",
    "tifffile>=2023.1",
    "imagecodecs>=2023.1",
    "imageio>=2.31",
    "shapely>=2.0",
    "tqdm>=4.65",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "mypy>=1.8",
    "pre-commit>=3.7",
    "pytest-cov>=7.1.0",
    "ipykernel>=7.2.0",
    "nbformat>=5.9",
]
# H&E invasion-front detection (deep-learning stack)
# Install with: uv sync --group ml
ml = [
    "torch>=2.3",
    "torchvision>=0.15",
    "scikit-learn>=1.3",
    "opencv-python-headless>=4.8",
]

[project.scripts]
multiplex-pipeline = "multiplex_pipeline.__main__:main"

[tool.setuptools]
py-modules = ["config", "schema", "domain", "__main__"]

[tool.setuptools.packages.find]
where = ["."]
include = ["analysis*", "preprocessing*", "visualization*", "io*", "utils*", "hne*"]

[tool.ruff]
line-length = 100
src = ["."]
exclude = ["notebooks", "groovy"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
# N803/N806 allow uppercase scientific variable names (e.g. A, B for matrices)
ignore = ["N803", "N806"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]  # allow assert in tests

[tool.mypy]
python_version = "3.10"
no_site_packages = true
explicit_package_bases = true
warn_unused_ignores = true
warn_return_any = true
disallow_untyped_defs = true
exclude = ["notebooks/", "groovy/"]

[[tool.mypy.overrides]]
# Third-party packages without complete type stubs
module = [
    "cv2.*",
    "tifffile.*",
    "imageio.*",
    "imageio.v2.*",
    "skimage.*",
    "shapely.*",
    "seaborn.*",
    "torch.*",
    "torchvision.*",
    "IPython.*",
    "scipy.spatial.*",
    "scipy.ndimage.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
omit = [
    "tests/*",
    "conftest.py",
    "__main__.py",
    # Visualization modules require a matplotlib display backend — tested via smoke tests only
    "visualization/plotting.py",
    "visualization/overlays.py",
    "visualization/qc.py",
    # IO loaders require actual files on disk
    "io/loaders.py",
    # H&E pipeline requires ML dependencies and real data
    "hne/*",
    "notebooks/*",
    "groovy/*",
]

[tool.coverage.report]
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "\\.\\.\\.",
]
